[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/environment/crates_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://crates/Crate.gd" type="Script" id=2]
[ext_resource path="res://weapons/Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 8 )

[node name="Crate" type="Area2D"]
collision_layer = 2
collision_mask = 49
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 0, 32, 32 )

[node name="BigAreaShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="AreaShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Top" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="BigTopShape" type="CollisionShape2D" parent="Top"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )
one_way_collision = true

[node name="TopShape" type="CollisionShape2D" parent="Top"]
position = Vector2( 0, -8 )
shape = SubResource( 4 )
one_way_collision = true

[node name="Explosion" parent="." instance=ExtResource( 3 )]
[connection signal="area_entered" from="." to="." method="_on_Crate_area_entered"]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Explosion"]
